fixed lefthand menu with auto scrollbar.

--- a/themes/doks/assets/scss/common/_global.scss
+++ b/themes/doks/assets/scss/common/_global.scss
@@ -138,7 +138,6 @@ body {
 
     .docs-sidebar-content {
       background-color: $gray-300;
-      width: 313px;
       padding-left: 2rem;
       height: 100%;
     }
@@ -417,4 +416,11 @@ figure {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.docs-sidebar-content {
+  position: fixed;
+  height: 100%;
+  width: 300px;
+  overflow: auto;
 }
